# sdk-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: client.rs  error.rs  lib.rs  types.rs
tests/: integration.rs
