[package]
name = "simplellm"
version = "0.1.0"
edition = "2021"
description = "Async Rust client for the SimpleLLM API"
license = "MIT"
repository = "https://github.com/SimpleLLM/sdk-rs"
keywords = ["llm", "ai", "openai", "simplellm", "async"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
futures-util = "0.3"
bytes = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
serde_json = "1"

[features]
default = []
